[fix]뉴스 검증 로직 및 초기 값 수정